--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         mensajeFinal.innerHTML = `
           <div class="fail">
             <p>¡Se acabaron tus vidas!</p>
-            <p>Inténtalo de nuevo para mejorar tu resultado.</p>
+            <p>Lo sentimos, no has escapado de la oficina 😔.</p>
           </div>
         `;
       }
