--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         mensajeFinal.innerHTML = `
           <div class="fail">
             <p>¡Se acabaron tus vidas, ${nombreJugador}!</p>
-            <p>Inténtalo de nuevo para mejorar tu resultado.</p>
+            <p>Lo sentimos no has escapado de la oficina 😔, mejor suerte para la próxima ves.</p>
           </div>
         `;
       }
