--- a/index.html
+++ b/index.html
@@ -568,6 +568,7 @@
                     { text: "Michelangelo", correct: false }
                 ]
             },
+            // NUEVAS PREGUNTAS A PARTIR DE AQUÍ
             {
                 question: "¿Cuál es el metal líquido a temperatura ambiente?",
                 answers: [
@@ -611,6 +612,141 @@
                     { text: "2019", correct: true },
                     { text: "2020", correct: false },
                     { text: "2017", correct: false }
+                ]
+            },
+            {
+                question: "¿Cuál es el océano más grande del mundo?",
+                answers: [
+                    { text: "Atlántico", correct: false },
+                    { text: "Índico", correct: false },
+                    { text: "Pacífico", correct: true },
+                    { text: "Ártico", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué metal es el principal componente del núcleo de la Tierra?",
+                answers: [
+                    { text: "Oro", correct: false },
+                    { text: "Hierro", correct: true },
+                    { text: "Plata", correct: false },
+                    { text: "Cobre", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué actor interpreta a Iron Man en el Universo Cinematográfico de Marvel?",
+                answers: [
+                    { text: "Chris Evans", correct: false },
+                    { text: "Chris Hemsworth", correct: false },
+                    { text: "Robert Downey Jr.", correct: true },
+                    { text: "Mark Ruffalo", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué cantante es conocida como 'La Reina del Pop'?",
+                answers: [
+                    { text: "Beyoncé", correct: false },
+                    { text: "Madonna", correct: true },
+                    { text: "Lady Gaga", correct: false },
+                    { text: "Rihanna", correct: false }
+                ]
+            },
+            {
+                question: "¿Cuál es el animal más grande del mundo?",
+                answers: [
+                    { text: "Elefante africano", correct: false },
+                    { text: "Ballena azul", correct: true },
+                    { text: "Tiburón ballena", correct: false },
+                    { text: "Jirafa", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué planeta tiene anillos visiblemente prominentes?",
+                answers: [
+                    { text: "Júpiter", correct: false },
+                    { text: "Saturno", correct: true },
+                    { text: "Urano", correct: false },
+                    { text: "Neptuno", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué superhéroe proviene del planeta Krypton?",
+                answers: [
+                    { text: "Batman", correct: false },
+                    { text: "Flash", correct: false },
+                    { text: "Superman", correct: true },
+                    { text: "Green Lantern", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué grupo musical lanzó el álbum 'The Dark Side of the Moon'?",
+                answers: [
+                    { text: "The Beatles", correct: false },
+                    { text: "Led Zeppelin", correct: false },
+                    { text: "Pink Floyd", correct: true },
+                    { text: "Queen", correct: false }
+                ]
+            },
+            {
+                question: "¿Cuál es el país más grande del mundo por área territorial?",
+                answers: [
+                    { text: "Canadá", correct: false },
+                    { text: "China", correct: false },
+                    { text: "Estados Unidos", correct: false },
+                    { text: "Rusia", correct: true }
+                ]
+            },
+            {
+                question: "¿Qué villano es el archienemigo de Spider-Man?",
+                answers: [
+                    { text: "Duende Verde", correct: true },
+                    { text: "Joker", correct: false },
+                    { text: "Lex Luthor", correct: false },
+                    { text: "Magneto", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué instrumento musical asocias con Louis Armstrong?",
+                answers: [
+                    { text: "Saxofón", correct: false },
+                    { text: "Piano", correct: false },
+                    { text: "Trompeta", correct: true },
+                    { text: "Batería", correct: false }
+                ]
+            },
+            {
+                question: "¿En qué continente se encuentra Egipto?",
+                answers: [
+                    { text: "Asia", correct: false },
+                    { text: "África", correct: true },
+                    { text: "Europa", correct: false },
+                    { text: "América", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué metal precioso tiene el símbolo químico 'Ag'?",
+                answers: [
+                    { text: "Oro", correct: false },
+                    { text: "Plata", correct: true },
+                    { text: "Platino", correct: false },
+                    { text: "Cobre", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué actor interpreta a Wolverine en las películas de X-Men?",
+                answers: [
+                    { text: "Hugh Jackman", correct: true },
+                    { text: "Ryan Reynolds", correct: false },
+                    { text: "Patrick Stewart", correct: false },
+                    { text: "Ian McKellen", correct: false }
+                ]
+            },
+            {
+                question: "¿Qué banda canadiense es conocida por éxitos como 'The Spirit of Radio'?",
+                answers: [
+                    { text: "Nickelback", correct: false },
+                    { text: "Rush", correct: true },
+                    { text: "Barenaked Ladies", correct: false },
+                    { text: "Arcade Fire", correct: false }
                 ]
             }
         ];
